// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CreateClusterPage /> Quota not fetched yet should render 1`] = `
<Fragment>
  <PageTitle
    breadcrumbs={
      <Breadcrumbs
        path={
          Array [
            Object {
              "label": "Clusters",
            },
            Object {
              "label": "Create",
            },
          ]
        }
      />
    }
    title="Create a Cluster to Get Started"
  />
  <PageSection>
    <Spinner
      centered={true}
    />
  </PageSection>
</Fragment>
`;

exports[`<CreateClusterPage /> User with no quota should render 1`] = `
<Fragment>
  <PageTitle
    breadcrumbs={
      <Breadcrumbs
        path={
          Array [
            Object {
              "label": "Clusters",
            },
            Object {
              "label": "Create",
            },
          ]
        }
      />
    }
    title="Create a Cluster to Get Started"
  />
  <PageSection>
    <Card>
      <div
        className="pf-c-content ocm-page ocp-osd-selection"
      >
        <div
          className="flex-container"
        >
          <Link
            className="infra-card pf-c-card create-cluster-card"
            replace={false}
            to="/install"
          >
            <CardHeader
              className="create-cluster-header"
            >
              <img
                alt="OpenShift Container Platform"
                className="create-cluster-logo"
                src="test-file-stub"
              />
            </CardHeader>
            <CardBody>
              Create an OCP cluster using the command-line installer. Your cluster will automatically register to the Cluster Manager after installation completes.
            </CardBody>
          </Link>
          <Card
            className="infra-card create-cluster-card card-disabled"
          >
            <CardHeader
              className="create-cluster-header"
            >
              <img
                alt="OpenShift Dedicated"
                className="create-cluster-logo"
                src="test-file-stub"
              />
            </CardHeader>
            <CardBody>
              Create a Red Hat-managed cluster (OSD), provisioned on Amazon Web Services.
            </CardBody>
          </Card>
        </div>
      </div>
    </Card>
  </PageSection>
</Fragment>
`;

exports[`<CreateClusterPage /> renders correctly 1`] = `
<Fragment>
  <PageTitle
    breadcrumbs={
      <Breadcrumbs
        path={
          Array [
            Object {
              "label": "Clusters",
            },
            Object {
              "label": "Create",
            },
          ]
        }
      />
    }
    title="Create a Cluster to Get Started"
  />
  <PageSection>
    <Card>
      <div
        className="pf-c-content ocm-page ocp-osd-selection"
      >
        <div
          className="flex-container"
        >
          <Link
            className="infra-card pf-c-card create-cluster-card"
            replace={false}
            to="/install"
          >
            <CardHeader
              className="create-cluster-header"
            >
              <img
                alt="OpenShift Container Platform"
                className="create-cluster-logo"
                src="test-file-stub"
              />
            </CardHeader>
            <CardBody>
              Create an OCP cluster using the command-line installer. Your cluster will automatically register to the Cluster Manager after installation completes.
            </CardBody>
          </Link>
          <Link
            className="infra-card pf-c-card create-cluster-card"
            replace={false}
            to="/create/osd"
          >
            <CardHeader
              className="create-cluster-header"
            >
              <img
                alt="OpenShift Dedicated"
                className="create-cluster-logo"
                src="test-file-stub"
              />
            </CardHeader>
            <CardBody>
              Create a Red Hat-managed cluster (OSD), provisioned on Amazon Web Services.
            </CardBody>
          </Link>
        </div>
      </div>
    </Card>
  </PageSection>
</Fragment>
`;
